Add VS Code launch configuration and use a silent terminal for builds.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,11 @@
       "group": "build",
       "problemMatcher": [],
       "label": "yarn: build",
-      "detail": "tsc -p tsconfig.json"
+      "detail": "tsc -p tsconfig.json",
+      "presentation": {
+        "reveal": "silent",
+        "close": true
+      }
     }
   ]
 }
