--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
-github: [qwell, jeltz]
+github: [qwell, jeltzmedia]
 patreon: northantara
 ko_fi: northantara
